Make the homepage look better on mobile and fix the btn-link not stylized

--- a/sample_project/sample/static/less/style.less
+++ b/sample_project/sample/static/less/style.less
@@ -33,7 +33,12 @@ a {
 
 .btn-main { .button-variant(white, @mainColor, darken(@mainColor, 5%)); }
 .btn-secondary { .button-variant(white, @secondaryColor, darken(@secondaryColor, 5%)); }
-
+.btn-link {
+    color: @mainColor;
+    &:hover, &:focus {
+	color: darken(@mainColor, 15%);
+    }
+}
 
 .table-buttons td {
     .button-variant(white, @mainColor, darken(@mainColor, 5%));
